codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_prompt_fork_modal.snap
---
source: tui/src/cwd_prompt.rs
expression: terminal.backend()
---

选择工作目录以分叉此会话

  会话 = 已分叉会话中记录的最新工作目录                              
  当前 = 当前工作目录                                               

› 1. 使用会话目录（/Users/example/session）                              
  2. 使用当前目录（/Users/example/current）

  按 Enter 继续
